--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,34 @@
-hypercorn==0.14.4
+aioredis==2.0.1
 annotated-types==0.6.0
 anyio==4.3.0
+async-timeout==4.0.3
+certifi==2024.2.2
 click==8.1.7
 colorama==0.4.6
+docx==0.2.4
 exceptiongroup==1.2.0
 fastapi==0.110.1
 h11==0.14.0
+httpcore==1.0.5
 httptools==0.6.1
+httpx==0.27.0
 idna==3.7
+lxml==5.2.1
+numpy==1.26.4
+pandas==2.2.2
+pillow==10.3.0
 pydantic==2.7.0
 pydantic_core==2.18.1
+python-dateutil==2.9.0.post0
+python-docx==1.1.0
 python-dotenv==1.0.1
+pytz==2024.1
 PyYAML==6.0.1
+six==1.16.0
 sniffio==1.3.1
 starlette==0.37.2
 typing_extensions==4.11.0
+tzdata==2024.1
 uvicorn==0.29.0
 watchfiles==0.21.0
 websockets==12.0
